--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vue/apollo-composable": "^4.0.0-alpha.12",
     "@vue/composition-api": "^1.0.0-beta.19",
     "core-js": "^3.6.5",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-plyr": "^7.0.0",
